=================
Changes for crash
=================

Unreleased
==========

 - Fixed the issue casuing parsing error while using internal ``non-sql`` crash
   commands with semicolon.

2015/09/02 0.14.0
=================

 - Fixed output tabular format bug which results in wrong representation
   of a string containing a floating point value.

 - Updated wording of the cluster check command output.

 - Added the check command which queries the ``sys.checks`` table for
   cluster checks

 - updated crate-python to 0.13.4 which includes following changes:

 - Fix urllib3 error with invalid kwargs for ``HTTPConnectionPool``
   when ``REQUESTS_CA_BUNDLE`` is set

2015/07/09 0.13.1
=================

 - added multiline support for tabular output format

2015/06/16 0.13.0
=================

 - added `dynamic` as output format option

2015/06/16 0.12.1
=================

 - display command help in case the command is not used correctly

 - display NULL values in mixed mode correctly

2015/04/28 0.12.0
=================

 - Fixed broken 'mixed' output style due to overriding import

 - Improved readability of sql syntax highlighting

 - Attempting to use unknown command now results in an error

 - added ``--version`` to cli interface to show crash version and exit

2015/04/03 0.11.5
=================

 - Fixed misconfigured logging that caused warning logs being printed
   to stderr.

 - Fixed an issue with pasting multi-line statements from clipboard.

 - Added argcomplete support. If argcomplete is available bash argument
   completion will work if argcomplete is loaded.

2015/03/01 0.11.4
=================

 - Fix: print stacktrace when crash is launched in verbose mode

2015/02/24 0.11.3
=================

 - Fix: query duration was rounded incorrectly to second precision

2015/02/11 0.11.2
=================

 - Fix: do not print ``rows affected`` in status message
   of DDL statements and other statements that do not affect rows

2015/02/03 0.11.1
=================
